--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/drive/folders/17926oxujz3jvm6blUYfuo50FYvWcn7Yl" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="./assets/Resume - Rishikesh Trivedi.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
